[package]
name = "wgsl-rs"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0"
log = "0.4"
nom = "7"
pretty_env_logger = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "1.0", features = ["derive"] }
wgpu = "0.9"    
quote = "1.0"
